optimize code, including:     -- replace [new Integer{int}] with [Integer.valueOf({int})] for small integers     -- replace LinkedHashMap into HashMap     -- decrease the use of [new]