@@ -13,15 +13,18 @@ public class CWordIntMap extends PackedScoreMap<CWordInt> {
 
 	@Override
 	public CWordInt loadKeyFromString(String str) {
-		CWordInt cwi = new CWordInt();
-		String[] args = str.split(sSplit);
-		cwi.allocate(new CWord(args[0]), new Integer(args[1]));
-		return cwi;
+		String[] args = str.split(" , ");
+		return new CWordInt(new CWord(args[0].substring(1, args[0].length() - 1)), Integer.valueOf(args[1]));
 	}
 
 	@Override
 	public String generateStringFromKey(CWordInt key) {
 		return "[" + key.first().toString() + "] , " + key.second().toString();
+	}
+
+	@Override
+	public CWordInt allocate_key(CWordInt key) {
+		return new CWordInt(key);
 	}
 
 }
